<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>
		4.0.0
	</modelVersion>
	<parent>
		<groupId>
			org.springframework.boot
		</groupId>
		<artifactId>
			spring-boot-starter-parent
		</artifactId>
		<version>
			3.4.3
		</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>
		ma.ensa
	</groupId>
	<artifactId>
		APMS
	</artifactId>
	<version>
		0.0.1-SNAPSHOT
	</version>
	<name>
		Agile Project Management System
	</name>
	<description>
		Agile Project Management System
	</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>
			17
		</java.version>
		<!-- SonarQube Coverage Path -->
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>
					org.junit
				</groupId>
				<artifactId>
					junit-bom
				</artifactId>
				<version>
					5.12.0
				</version>
				<type>
					pom
				</type>
				<scope>
					import
				</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-actuator
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.mapstruct
			</groupId>
			<artifactId>
				mapstruct
			</artifactId>
			<version>
				1.6.3
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-data-jpa
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.junit.jupiter
			</groupId>
			<artifactId>
				junit-jupiter
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.hibernate
			</groupId>
			<artifactId>
				hibernate-core
			</artifactId>
			<version>
				6.6.8.Final
			</version>
			<!-- or latest version -->
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-web
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.postgresql
			</groupId>
			<artifactId>
				postgresql
			</artifactId>
			<scope>
				runtime
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.projectlombok
			</groupId>
			<artifactId>
				lombok
			</artifactId>
			<version>
				1.18.22
			</version>
			<optional>
				true
			</optional>
			<scope>
				provided
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-test
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>
				junit
			</groupId>
			<artifactId>
				junit
			</artifactId>
			<version>
				4.13.2
			</version>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				com.h2database
			</groupId>
			<artifactId>
				h2
			</artifactId>
			<scope>
				runtime
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-validation
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springdoc
			</groupId>
			<artifactId>
				springdoc-openapi-starter-webmvc-ui
			</artifactId>
			<version>
				2.8.5
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-aop
			</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>
					org.apache.maven.plugins
				</groupId>
				<artifactId>
					maven-compiler-plugin
				</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok
							</artifactId>
						</path>
						<path>
							<groupId>
								org.mapstruct
							</groupId>
							<artifactId>
								mapstruct-processor
							</artifactId>
							<version>
								1.6.3
							</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<!-- JaCoCo plugin to produce XML report that SonarQube can consume -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.10</version>
				<executions>
					<!-- prepares the agent and creates the exec file during tests -->
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- generate XML report for SonarQube on verify phase -->
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<!-- place XML in target/site/jacoco or target/jacoco -->
							<outputDirectory>${project.build.directory}/jacoco</outputDirectory>
							<!-- produce XML (used by SonarQube) and HTML -->
							<formats>
								<format>XML</format>
								<format>HTML</format>
							</formats>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>
					maven-surefire-plugin
				</artifactId>
				<version>
					3.5.2
				</version>
			</plugin>
			<plugin>
				<groupId>
					org.springframework.boot
				</groupId>
				<artifactId>
					spring-boot-maven-plugin
				</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok
							</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- SonarQube Maven Plugin to send analysis results -->
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.10.0.2594</version>
			</plugin>
		</plugins>
	</build>
</project>